# workshop-graphql-netflix

./: .gitignore
data/: movies_by_genre.csv
db/: actors.cql  movies.cql  series.cql
db/queries/: moviesByGenreq.cql
server/: Cargo.toml  cert.pem  key.pem
server/src/: main.rs
src/: App.js
